# openglbase

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  cube.h  fragment.fs  main.cpp  mesh.h  model.h  openGLMain  vertex.vs
include/glad/: glad.h
include/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
include/glm/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
include/glm/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/glm/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
include/glm/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
lib/: assimp-vc143-mtd.lib  glfw3.lib
resources/: plane.h
shaders/: vertex.vs
src/: glad.c  main.cpp
utils/: shader_s.h
